@@ -1,3 +1,8 @@
+2006-10-05    <risc@volumehost.com>
+
+	* FeatureExtraction/gabor.c
+	move a conditional outside of the inner loops, for iteration 2 and 4.
+
 2006-09-20    <risc@volumehost.com>
 
 	* FeatureExtraction/gabor.c
